--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -1,453 +1,538 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-
+li{
+	list-style: none;	
+}
 :root {
-    --mainColor: #6169db;
-    --txtColor: #686ffd;
-    --txtBlack: #111111;
-    --txtColorSecond: #ffffff;
-    --btnColor: #474ed1;
-    --onlineStatus: #67cfff;
-    --offlineStatus: #ff6565;
-    --conversationBody: #b1b6ff;
+  --mainColor: #afeeee;
+  --txtColor: #686ffd;
+  --txtBlack: #111111;
+  --txtColorSecond: #ffffff;
+  --btnColor: rgba(0, 0, 0, 0.4);
+  --onlineStatus: #67cfff;
+  --offlineStatus: #ff6565;
+  --conversationBody: rgba(255,255,255,.4);
 }
 
 html {
-    font-size: 10px;
-    font-family: 'Ubuntu', sans-serif;
-    background: var(--mainColor);
-    color: var(--txtColorSecond);
+  font-size: 10px;
+  font-family: "Courier New", Courier, monospace;
+  background: var(--mainColor);
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 .border {
-    border-radius: .5rem;
+  border-radius: 0.5rem;
 }
-
+.bg-dark {
+  background: rgba(0, 0, 0, 0.3);
+  color: black;
+}
+.bg-light {
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, rgba(0, 0, 0, 0.3));
+  color: black;
+}
+.bx-shadow {
+  box-shadow: 1px rgba(0, 0, 0, 0.4);
+}
 .container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
 }
-
+.center {
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
 .form-title {
-    font-size: 3.5rem;
-    margin-bottom: 5rem;
-    text-align: center;
+  font-size: 3.5rem;
+  margin-bottom: 5rem;
+  text-align: center;
 }
 
 .form-container {
-    margin: auto;
-    width: 40rem;
-    max-width: 100%;
-    display: inline-block;
+  margin: auto;
+  width: 40rem;
+  max-width: 100%;
+  display: inline-block;
 }
 
-.txt-input, .btn {
-    padding: 1.5rem 1rem;
-    display: block;
-    margin-top: 1rem;
-    width: 100%;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    font-family: 'Ubuntu', sans-serif;
-    box-shadow: 0px .2rem .4rem rgba(1, 1, 1, 0.05);
+.txt-input,
+.btn {
+  padding: 1.5rem 1rem;
+  display: block;
+  margin-top: 2rem;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .btn {
-    cursor: pointer;
-    background: var(--btnColor);
-    color: var(--txtColorSecond);
-    font-size: 1.8rem;
+  cursor: pointer;
+  color: var(--txtColorSecond);
+  font-size: 1.8rem;
 }
-
 .tab-control {
-    text-align: left;
-    display: flex;
+  text-align: left;
+  display: flex;
+}
+.tab-control.border {
+  border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .tab-control h3 {
-    cursor: pointer;
-    color: var(--txtColorSecond);
-    font-size: 1.6rem;
-    padding-right: 1.5rem;
-    background: var(--btnColor);
-    padding: 1.5rem 1rem;
-    text-align: center;
-    border-radius: .5rem .5rem 0rem 0rem;
-    flex-grow: 1;
+  cursor: pointer;
+  font-size: 1.6rem;
+  padding-right: 1.5rem;
+  background: var(--btnColor);
+  padding: 1.5rem 1rem;
+  text-align: center;
+  border-radius: 0.5rem 0.5rem 0rem 0rem;
+  flex-grow: 1;
 }
 
 .tab-control h3.active {
-    color: var(--txtColor);
-    background: var(--txtColorSecond);
+  background: none;
 }
 
-.login-form, .register-form {
-    display: none;
-    padding: 2rem 1.5rem;
-    background: #ffffff;
-    border-radius: 0rem 0rem .5rem .5rem;
+.login-form,
+.register-form {
+  display: none;
+  padding: 2rem 1.5rem;
+  border-radius: 0rem 0rem 0.5rem 0.5rem;
 }
 
-.login-form.active, .register-form.active {
-    display: block;
+.login-form.active,
+.register-form.active {
+  display: block;
 }
-
 .image-profile {
-    width: 15rem;
-    height: 15rem;
-    border-radius: 50%;
-    margin-top: 1rem;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  margin: 1rem auto 1rem auto;
 }
 
 .image-profile img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .conversation-container {
-    box-shadow: 0rem .2rem .4rem rgba(1, 1, 1, 0.05);
-    display: flex;
-    flex-wrap: wrap;
-    height: 70rem;
+  display: flex;
+  flex-wrap: wrap;
+  height: 70rem;
 }
 
 .conversation-container .left-side {
-    width: 30rem;
-    background: var(--btnColor);
-    padding: 2rem 1.5rem;
-    box-sizing: border-box;
-    border-radius: 1rem 0rem 0rem 1rem;
+  width: 30rem;
+  background: var(--btnColor);
+  padding: 2rem 1.5rem;
+  box-sizing: border-box;
+  border-radius: 1rem 0rem 0rem 1rem;
 }
 
 .conversation-container .right-side {
-    width: 70rem;
-    background: var(--conversationBody);
-    box-sizing: border-box;
-    border-radius: 0rem 1rem 1rem 0rem;
-    overflow: hidden;
+  width: 70rem;
+  background: var(--conversationBody);
+  box-sizing: border-box;
+  border-radius: 0rem 1rem 1rem 0rem;
+  overflow: hidden;
 }
 
 .tab-control {
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
 }
 
 .tab-control i {
-    flex-grow: 1;
-    text-align: center;
-    font-size: 2rem;
-    cursor: pointer;
-    padding: 1.5rem 0rem;
-    border-radius: .5rem;
+  flex-grow: 1;
+  text-align: center;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 1.5rem 0rem;
+  border-radius: 0.5rem;
 }
 
-.tab-control i.active, .tab-control i:hover {
-    background: var(--mainColor);
+.tab-control i.active,
+.tab-control i:hover {
+  background: whitesmoke;
+  color: black;
+  box-shadow: 1px 1px 1px rgba(255,255,255,.4);
 }
 
 .list-user {
-    margin-top: 2rem;
-    overflow-y: auto;
-    max-height: 50rem;
-    list-style: none;
+  margin-top: 1rem;
+  overflow-y: auto;
+  max-height: 50rem;
 }
 
 .list-user-search .txt-input {
-    background: var(--mainColor);
-    color: var(--txtColorSecond);
-    border-radius: .5rem;
+  background: none;
+  color: whitesmoke;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
 }
 
 .list-user-search .txt-input::placeholder {
-    color: var(--txtColorSecond);
+  color: var(--txtColorSecond);
 }
 
 .list-user li {
-    padding: 1rem;
-    border-radius: .5rem;
-    cursor: pointer;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 
-.list-user li:hover, .list-user li.active {
-    background: var(--mainColor);
+.list-user li:hover,
+.list-user li.active {
+  background: rgba(255, 255, 255,.4);
+  color: whitesmoke;
 }
 
 .user-contain {
-    display: flex;
+  display: flex;
 }
 
 .user-img {
-    margin-right: 1rem;
-    border-radius: 50%;
-    padding: .2rem;
-    background: var(--txtColorSecond);
-    position: relative;
+  margin-right: 1rem;
+  border-radius: 50%;
+  padding: 0.2rem;
+  background: var(--txtColorSecond);
+  position: relative;
 }
 
 .user-img-dot {
-    position: absolute;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    z-index: 2;
-    background: var(--offlineStatus);
-    right: .2rem;
-    bottom: .2rem;
-    border: .3rem solid var(--txtColorSecond);
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  z-index: 2;
+  background: var(--offlineStatus);
+  right: 0.2rem;
+  bottom: 0.2rem;
+  border: 0.3rem solid var(--txtColorSecond);
 }
 
 .user-img-dot.online {
-    background: var(--onlineStatus);
+  background: var(--onlineStatus);
 }
 
 .user-img img {
-    border-radius: 50%;
-    width: 5rem;
-    height: 5rem;
+  border-radius: 50%;
+  width: 5rem;
+  height: 5rem;
 }
 
 .user-name {
-    font-size: 1.5rem;
-    display: block;
-    margin-top: .5rem;
-    font-weight: 700;
+	color: whitesmoke;
+	font-size: 1.5rem;
+	display: block;
+	margin-top: 0.5rem;
+	font-weight: 700;
+	font-size: 1.5rem;
 }
 
 .user-last-message {
-    font-size: 1.2rem;
-    display: block;
-    margin-top: .7rem;
+  font-size: 1.2rem;
+  display: block;
+  margin-top: 0.7rem;
 }
 
 .right-side .user-contact {
-    box-shadow: 0rem .2rem .4rem rgba(1, 1, 1, 0.05);
-    padding: 1.5rem;
-    color: var(--txtBlack);
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    background: var(--txtColorSecond);
+  box-shadow: 0rem 0.2rem 0.4rem rgba(1, 1, 1, 0.05);
+  padding: 1.5rem;
+  color: var(--txtBlack);
+  background: rgba(0,0,0,.4);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .back {
-    padding: 1rem;
-    font-size: 1.6rem;
-    cursor: pointer;
-    display: none;
-    padding-left: 0rem;
+  padding: 1rem;
+  font-size: 1.6rem;
+  cursor: pointer;
+  display: none;
+  padding-left: 0rem;
 }
 
 .user-contact .user-contain {
-    align-items: center;
-    flex-grow: 1;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .invite-user {
-    font-size: 1.3rem;
-    margin-right: 2rem;
+  font-size: 1.3rem;
+  margin-right: 2rem;
 }
 
-.total-invite-user, .invite {
-    padding: 0rem 1rem;
+.total-invite-user,
+.invite {
+  padding: 0rem 1rem;
 }
 
 .total-invite-user {
-    border-right: 0.1rem solid var(--txtBlack);
+  border-right: 0.1rem solid var(--txtBlack);
 }
 
-.setting, .invite {
-    cursor: pointer;
+.setting,
+.invite {
+  cursor: pointer;
 }
 
 .setting {
-    font-size: 1.6rem;
-    padding: .8rem 1rem;
-    border-radius: .5rem;
+  font-size: 1.6rem;
+  padding: 0.8rem 1rem;
+  border-radius: 0.5rem;
 }
 
 .setting:hover {
-    background: var(--mainColor);
-    color: var(--txtColorSecond);
+  background: var(--mainColor);
+  color: var(--txtColorSecond);
 }
 
 .list-messages-contain {
-    padding: 0rem 1.5rem;
-    height: 56rem;
-    overflow-y: auto;
+  padding: 0rem 1.5rem;
+  height: 56rem;
+  overflow-y: auto;
 }
 
 .message {
-    display: flex;
-    align-items: flex-end;
-    overflow-y: auto;
-    margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  overflow-y: auto;
+  margin-top: 1rem;
 }
 
 .message.right {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .message.right .message-img {
-    order: 2;
+  order: 2;
 }
 
 .message-img {
-    width: 3rem;
-    height: 3rem;
-    margin-right: .5rem;
+  width: 3rem;
+  height: 3rem;
+  margin-right: 0.5rem;
 }
 
 .message-img img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
 .message-text {
-    padding: .8rem;
-    background: var(--mainColor);
-    border-radius: .5rem;
-    font-size: 1.2rem;
-    font-weight: 500;
-    max-width: 20rem;
-    margin-right: .5rem;
+  padding: 0.8rem;
+  background:rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  max-width: 15rem;
+  margin-right: 0.5rem;
 }
 
-.message-text>* {
-    max-width: 100%;
+.message-text img {
+  max-width: 100%;
 }
 
 .message.right .message-text {
-    background: var(--txtColorSecond);
-    color: var(--txtBlack);
+  background: rgba(255, 255, 255, .4);
+  color: black;
 }
 
 .list-file {
-    width: 100%;
-    position: absolute;
-    background: var(--txtColorSecond);
-    left: 0;
-    bottom: 100%;
-    display: flex;
-    overflow-y: auto;
-    box-sizing: border-box;
+  width: 100%;
+  position: absolute;
+  background: var(--txtColorSecond);
+  left: 0;
+  bottom: 100%;
+  display: flex;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
 
 .list-file.active {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .list-file img {
-    width: 7rem;
-    height: 7rem;
-    object-fit: cover;
-    margin: 0 .5rem;
+  width: 7rem;
+  height: 7rem;
+  object-fit: cover;
+  margin: 0 0.5rem;
 }
 
 .list-file li {
-    position: relative;
+  position: relative;
 }
 
 .file-input {
-    padding: 1.5rem;
-    color: var(--txtBlack);
-    box-shadow: 0rem .2rem .4rem rgba(1, 1, 1, 0.1);
-    margin-right: .5rem;
-    white-space: nowrap;
+  padding: 1.5rem;
+  color: var(--txtBlack);
+  box-shadow: 0rem 0.2rem 0.4rem rgba(1, 1, 1, 0.1);
+  margin-right: 0.5rem;
+  white-space: nowrap;
 }
 
 .delete-attach {
-    position: absolute;
-    right: -.2rem;
-    top: -.2rem;
-    color: var(--txtColorSecond);
-    cursor: pointer;
-    width: 2rem;
-    height: 2rem;
-    font-size: 1.4rem;
-    text-align: center;
-    line-height: 2rem;
-    background: var(--mainColor);
-    opacity: .5;
-    border-radius: 50%;
+  position: absolute;
+  right: -0.2rem;
+  top: -0.2rem;
+  color: var(--txtColorSecond);
+  cursor: pointer;
+  width: 2rem;
+  height: 2rem;
+  font-size: 1.4rem;
+  text-align: center;
+  line-height: 2rem;
+  background: var(--mainColor);
+  opacity: 0.5;
+  border-radius: 50%;
 }
 
 .form-send-message {
-    background: var(--txtColorSecond);
-    height: 5.5rem;
-    align-items: center;
-    display: flex;
-    position: relative;
+  background: rgba(255,255,255,.6);
+  height: 5.5rem;
+  align-items: center;
+  display: flex;
+  position: relative;
 }
 
 .form-send-message .txt-input {
-    margin: 0rem;
-    font-size: 1.3rem;
-    flex-grow: 1;
+  margin: 0rem;
+  font-size: 1.3rem;
+  flex-grow: 1;
+  background: none;
+  outline: none;
 }
 
 .form-send-message .btn {
-    background: transparent;
-    color: var(--btnColor);
-    width: auto;
-    margin: 0rem;
+  background: transparent;
+  color: var(--btnColor);
+  width: auto;
+  margin: 0rem;
 }
 
-.form-send-message input[type="file"], .register-form input[type="file"] {
-    display: none;
+.form-send-message input[type="file"],
+.register-form input[type="file"] {
+  display: none;
 }
 
 @media only screen and (max-width: 1076px) {
-    .conversation-container {
-        flex-direction: row;
-        padding: 0rem 1.5rem;
-        position: relative;
-        max-width: 100%;
-        box-sizing: border-box;
-    }
+  .conversation-container {
+    flex-direction: row;
+    padding: 0rem 1.5rem;
+    position: relative;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
 
-    .conversation-container .right-side, .conversation-container .left-side {
-        width: 45rem;
-        display: none;
-        border-radius: 1rem;
-    }
+  .conversation-container .right-side,
+  .conversation-container .left-side {
+    width: 45rem;
+    display: none;
+    border-radius: 1rem;
+  }
 
-    .conversation-container .right-side.active, .conversation-container .left-side.active {
-        display: block;
-    }
+  .conversation-container .right-side.active,
+  .conversation-container .left-side.active {
+    display: block;
+  }
 
-    .back {
-        display: block;
-    }
+  .back {
+    display: block;
+  }
 }
 
 @media only screen and (max-width: 400px) {
-    .conversation-container .right-side, .conversation-container .left-side {
-        width: 30rem;
-        display: none;
-        border-radius: 1rem;
-    }
+  .conversation-container .right-side,
+  .conversation-container .left-side {
+    width: 30rem;
+    display: none;
+    border-radius: 1rem;
+  }
+}
+.dropbtn {
+	background: none;
+	color: white;
+	margin-right: 2rem;
+	font-size: 3rem;
+	border: none;
+	cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background: none;
+}
+
+
+.dropdown {
+  position: relative;
+  display: block;
+  float: right;
+}
+
+.dropdown-content {
+  display: none;
+  background: whitesmoke;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  font-size: 1.5rem;
+  width: 200px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+	background: whitesmoke;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, .2);
+	border-radius: .5rem;
+	position: -webkit-sticky;
+}
+.show {
+	display: block;
+	position: fixed;
+}
+.frm-side input[type="submit"] {
+background:none;
+border:none;
+text-align: left;
+color: black;
+padding: 12px 16px;
+font-size: 1.5rem;
+width: 200px;
+text-decoration: none;
+display: block;
 }
