--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -502,7 +502,7 @@ img {
   background: whitesmoke;
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 9;
 }
 
 
@@ -535,4 +535,15 @@ font-size: 1.5rem;
 width: 200px;
 text-decoration: none;
 display: block;
+}
+.add-status {
+font-size: 1.5rem;
+padding: 1rem;
+}
+.messages{
+	display: flex;
+	align-item: flex-end;
+	overflow-y: auto;
+	margin-top: 1rem;
+}
 }
